--- a/client/home.jade
+++ b/client/home.jade
@@ -6,7 +6,7 @@ template(name='home')
     .ui.stackable.four.column.grid
         each role_models
             .column
-                .ui.segment.profile_block.set_model
+                .ui.segment.set_model
                     a(href="/m/#{slug}")
                         .ui.grey.header 
                             i.icon(class=icon)
