--- a/client/chat.jade
+++ b/client/chat.jade
@@ -9,9 +9,9 @@ template(name='chat_messages_pane')
             input.add_message(type='text' placeholder='add message...')
                 
 template(name='chat_list')
-    //- .ui.segments
-    each chat_list_items
-        +chat_list_item
+    .ui.segments
+        each chat_list_items
+            +chat_list_item
             
             
 template(name='chat_list_item')
@@ -27,7 +27,7 @@ template(name='chat_list_item')
                             +user_status
             .description
                 each tags
-                    .ui.small.basic.circular.label #{this}
+                    .ui.small.label #{this}
             .description
                 // strong {{cutString last_message.body 100}}
                 strong {{last_message.body}}
@@ -60,14 +60,14 @@ template(name='chat_message')
             .actions
                 +voting
                 if is_author
-                    i.remove.link.circular.icon.delete_message(title='delete message')
+                    i.remove.link.icon.delete_message(title='delete message')
                 else
                     if read
-                        i.envelope.open.outline.link.circular.large.icon.mark_unread(title='mark unread')
+                        i.envelope.open.outline.link.large.icon.mark_unread(title='mark unread')
                     else
-                        i.mail.link.outline.circular.large.icon.mark_read(title='mark read')
+                        i.mail.link.outline.large.icon.mark_read(title='mark read')
                 each readers
-                    .ui.tiny.basic.circular.label(title="Read by #{username}") #{username}
+                    .ui.tiny.label(title="Read by #{username}") #{username}
                     // img.ui.avatar.image(src="{{c.url image_id width=50 height=50 gravity='face' crop='fill'}}")
                                                 
 
@@ -75,14 +75,14 @@ template(name='view_chats')
     .ui.stackable.padded.grid
         .row
             .four.wide.column
-                //- .ui.circular.label(title='Unread') #{unread_message_count} Unread
-                .ui.icon.circular.basic.button#create_chat(title='new channel')
-                    +i name='plus'
+                //- .ui.label(title='Unread') #{unread_message_count} Unread
+                .ui.icon.button#create_chat(title='new channel')
+                    i.plus.icon
                 .unread_icon(data-tooltip='Unread Messages' data-position='bottom center')
                     i.secured-letter.icon
                 //- .ui.inline.grey.header 
                     i.tags.icon
-                +i name='tags'
+                i.tags.icon
                 +cloud filter='chat'
                 //- +participant_filter type='chat'
                 +chat_list
@@ -124,11 +124,11 @@ template(name='view_chat')
                         |participants
                         if currentUser
                             if in_chat
-                                //- i.sign.in.circular.link.icon.leave_chat(title='leave')
+                                //- i.sign.in.link.icon.leave_chat(title='leave')
                                 +i name='leaving-queue' title='leave conversation' classes='leave_chat pointer'
                             else
                                 +i name='joining-queue' title='join conversation' classes='join_chat pointer'
-                                //- i.sign.out.circular.link.icon.join_chat(title='join')
+                                //- i.sign.out.link.icon.join_chat(title='join')
                     .ui.relaxed.list
                         each participants
                             .item
@@ -144,11 +144,11 @@ template(name='view_chat')
                                         | @#{username}
                                         +user_status
                     if can_edit
-                        .ui.circular.basic.compact.icon.button.close_chat(title='close chat')
-                            +ismall name='cancel'
+                        .ui.icon.button.close_chat(title='close chat')
+                            i.ban.icon
                             //- |close chat
                     .ui.small.inline.grey.header 
-                        +ismall name='tags'
+                        i.tags.icon
                         | tags
                     if can_edit
                         +array_edit key='tags' label='tags' direct=true
