--- a/client/docs.jade
+++ b/client/docs.jade
@@ -1,5 +1,5 @@
 // template(name='cloud')
-//     #cloud.ui.basic.center.aligned.fluid.segment
+//     #cloud.ui.center.aligned.fluid.segment
 //         if currentUser
 //             .ui.icon.input
 //                 i.plus.icon
@@ -31,37 +31,37 @@ template(name='cloud')
         //-     +inputAutocomplete settings=settings id="search" class="" autocomplete="off" 
         // .ui.hidden.fitted.divider
     if selected_tags
-        #clear_tags.ui.grey.icon.circular.button
+        #clear_tags.ui.grey.icon.button
             i.remove.icon
         each selected_tags
-            .unselect_tag.ui.grey.circular.button
+            .unselect_tag.ui.grey.button
                 strong #{this}
     each all_tags
-        .ui.circular.basic.button.select_tag(class=cloud_tag_class) 
+        .ui.button.select_tag(class=cloud_tag_class) 
             strong #{this.name}
 
 
 
 template(name='doc_cloud')
-    #cloud.ui.basic.segment.container
+    #cloud.ui.segment.container
         //- .ui.left.icon.input
         //-     i.search.icon
         //-     +inputAutocomplete settings=settings id="search" class="" autocomplete="off" 
         if selected_tags
-            #clear_tags.ui.primary.icon.circular.large.button
+            #clear_tags.ui.primary.icon.large.button
                 i.remove.icon
             each selected_tags
-                .unselect_tag.ui.primary.circular.large.button
+                .unselect_tag.ui.primary.large.button
                     strong #{this}
         each all_tags
-            .ui.circular.basic.button.select_tag(class=cloud_tag_class) 
+            .ui.button.select_tag(class=cloud_tag_class) 
                 strong #{this.name}
 
 
 template(name='docs')
     .ui.container
         div
-            #add.ui.green.basic.button
+            #add.ui.green.button
                 i.plus.icon
                 | Full Add
             .ui.icon.input
@@ -87,7 +87,7 @@ template(name='view')
             .description
                 |!{description}
             if can_edit
-                .edit.ui.icon.circular.basic.button
+                .edit.ui.icon.button
                     i.pencil.icon.icon
             else
                 | by #{author.username} #{when}
@@ -98,9 +98,9 @@ template(name='edit')
         .ui.stackable.padded.grid
             .four.wide.column
                 h1.ui.header Edit #{type}
-                a.ui.green.big.circular.icon.button(href="/m/#{type}") 
+                a.ui.green.big.icon.button(href="/m/#{type}") 
                     i.large.checkmark.icon
-                #delete_model.ui.red.icon.circular.button
+                #delete_model.ui.red.icon.button
                     i.remove.icon
             .twelve.wide.column
                 //- each fields
