--- a/client/users.jade
+++ b/client/users.jade
@@ -136,8 +136,9 @@ template(name='users')
                     i.users.grey.icon
                     |Users
                 .ui.left.icon.huge.fluid.input
+                    i.search.icon
                     input.username_search(type='text' placeholder='lookup name...')
-                .ui.centered.four.cards
+                .ui.centered.four.stackable.cards
                     each users
                         +user
                 
