--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -2,8 +2,7 @@ template(name='login')
     .ui.padded.stackable.grid
         .centered.row
             .ten.wide.column
-                .ui.center.aligned.basic.segment
-                    .ui.header Gold Run Online Login
+                .ui.center.aligned.header Gold Run Login
                     //- i.massive.icons
                     //-     i.home.grey.icon
                     //-     i.corner.right.chevron.icon
@@ -12,29 +11,30 @@ template(name='login')
                 .ui.fluid.input(class=login_class)
                     .ui.inline.grey.small.header 
                         i.user.grey.icon
-                        |Username
+                        |username
                     input.username(type='text')
                 .ui.fluid.input(class=login_class)
                     .ui.inline.grey.small.header 
                         i.lock.grey.icon
-                        | Password
+                        | password
                     input.password(type='password')
                 //- if username
                 if logging_in
-                    .ui.fluid.large.circular.basic.button.enter(title="Login #{username}" class=enter_class)
-                        | Login #{username}
-                        i.right.chevron.icon
+                    .ui.fluid.large.button.enter(title="Login #{username}" class=enter_class)
+                        i.sign.in.alternate.icon
+                        | #{username}
+                        //- i.right.chevron.icon
                 else
                     if username
-                        .ui.center.aligned.basic.segment
+                        .ui.center.aligned.segment
                             .ui.small.grey.header no '#{username}' user
-                            a.ui.circular.grey.button(href='/register')
+                            a.ui.grey.button(href='/register')
                                 i.user.plus.icon
                                 | Register
                 .ui.center.aligned.basic.segment    
-                    a.ui.circular.large.basic.button(href='/forgot_password')
+                    a.ui.large.button(href='/forgot_password')
                         i.refresh.icon
                         |Forgot Password
-                    a.ui.circular.large.basic.button(href='/register') 
+                    a.ui.large.button(href='/register') 
                         i.user.plus.icon
                         |Register
